New CollectionViewController for pets images in fullScreen "FullScreenCollectionVC" + Favorites view page & core data + more options "location / distance"

--- a/PetFinder/Info.plist
+++ b/PetFinder/Info.plist
@@ -4,6 +4,12 @@
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>PetFinder</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>PetFinder</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>PetFinder</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
